# helloworldbutwhatthefuck

./: Cargo.toml
src/: main.rs
