[package]
name = "holy_fuck"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
num-complex = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
rayon = "1.7.0"
regex = "1.8.1"
lazy_static = "1.4.0"
ndarray = "0.15.6"
petgraph = "0.6.3"
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
image = "0.24.6"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
num-traits = "0.2.19"
